<resources>
    <string name="app_name">Nasa Image Gallery</string>
    <string name="no_image_found">No image found</string>
    <string name="some_error_occured">Some error occurred</string>
    <string name="thumbnail_transition_name">image_small</string>
    <string name="dummy_image_description">If this is Saturn, where are the rings? When Saturn\'s disappeared in 1612, Galileo did not understand why. Later that century, it became understood that Saturn\'s unusual protrusions were rings and that when the Earth crosses the ring plane, the edge-on rings will appear to disappear. This is because Saturn\'s rings are confined to a plane many times thinner, in proportion, than a razor blade. In modern times, the robot Cassini spacecraft orbiting Saturn frequently crossed Saturn\'s ring plane during its mission to Saturn, from 2004 to 2017. A series of plane crossing images from 2005 February was dug out of the vast online Cassini raw image archive by interested Spanish amateur Fernando Garcia Navarro. Pictured here, digitally cropped and set in representative colors, is the striking result. Saturn\'s thin ring plane appears in blue, bands and clouds in Saturn\'s upper atmosphere appear in gold. Details of Saturn\'s rings can be seen in the high dark shadows across the top of this image, taken back in 2005. The moons Dione and Enceladus appear as bumps in the rings. Free Presentation: APOD Editor to show best astronomy images of 2019 -- and the decade -- in NYC on January 3</string>
    <string name="name_label">Name:</string>
    <string name="copyright_label">Copyright:</string>
    <string name="date_label">Date:</string>
</resources>