<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_detail_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/fragment_image_detail_scene">

    <ImageView
        android:id="@+id/detail_imageview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="preview image"
        android:scaleType="centerCrop"
        android:transitionName="@string/thumbnail_transition_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_imageview"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/BodySmall2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/small_image_name_textView"
            style="@style/Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Starburst Galaxy M94 from Hubble from telescope" />

        <TextView
            style="@style/BodySmall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/copyright_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/copyright_textView"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Stanislav Volskiy ©" />

        <TextView
            style="@style/BodySmall2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/date_label"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/date_textView"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2019-12-30" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/text_detail_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/image_name_textView"
        style="@style/H2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.02"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_details_layout"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Starburst Galaxy M94 from Hubble from telescope" />

    <LinearLayout
        android:id="@+id/text_details_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_detail_guidline">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_800" />

        <ScrollView
            android:id="@+id/scroll_region"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/image_description_textView"
                style="@style/BodySmall2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="16dp"
                android:textColor="@color/white"
                tools:text="@string/dummy_image_description" />
        </ScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/expand_details_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:background="@drawable/expand_arrow_image"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toTopOf="@id/text_details_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_details_layout" />

</androidx.constraintlayout.motion.widget.MotionLayout>